[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
virtualmachine = { path = "../virtualmachine" }
log = "0.4"
env_logger = "0.11.3"
